# shop-chatbot-v2

./: .gitattributes  .gitignore  README.md  all_packages.txt  mcp_client.py  mcp_server.json  mcp_server.py  pyproject.toml  requirements.txt
src/: main.py
src/config/: database.py  settings.py
src/controllers/: askControllers.py  documentController.py  messagesController.py  sessionController.py  telegramController.py  whatappController.py
src/model/: tableModel.py
src/page/: index.html
src/prompt/: toolPrompt.py
src/routes/: askRoute.py  documentsRoute.py  mcpRoute.py  messagesRoute.py  route.py  sessionsRoute.py  telegramRoute.py  usermemoryRoute.py  whatappRoute.py
src/services/: documentService.py  emailService.py  mem0_usage.py  messageService.py  productService.py  sessionService.py  usermemoryService.py
src/static/: style.css
src/tools/: toolmanager.py
src/utils/: createSession.py  toolAgent.py  toolSchema.py  vectorstore_loader.py
src/validations/: chatSchemas.py  schemas.py
