[project]
name = "langchain-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.17.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-chroma>=0.2.6",
    "langchain-openai>=0.3.35",
    "chromadb>=1.1.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.2",
    "sqlalchemy>=2.0.44",
    "pymysql>=1.1.2",
    "mem0ai>=0.1.0",
    "jinja2>=3.1.6",
    "telethon>=1.36.0",
]
